# coco-project

./: .gitignore  coco_rocket_lander_npross.ipynb  pyproject.toml
coco_rocket_lander_npross/: __main__.py  algorithms.py  notebook.py  simulator.py
presentation/: beamercolorthemehsr.sty  fiveslides.tex  main.tex
