[tool.poetry]
name = "rocket"
version = "0.1.0"
description = ""
authors = ["Nao Pross <np@0hm.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
coco-rocket-lander = { git = "https://gitlab.ethz.ch/bsaverio/coco-project.git" }
cvxpy = "^1.3.1"
colorlog = "^6.7.0"
numpy = "1.22.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
